--- a/Css/style.css
+++ b/Css/style.css
@@ -5,19 +5,11 @@
     overflow: hidden;
 }
 
-
-
 .contenedor1 {
     background-color: rgb(155,156,160);
     color: rgb(211,212,214);
     display: block;
-    
 }
-
-.flex-container {
-    display: flex;
-}
-
 
 h2 {
     text-indent: 180px;
@@ -26,7 +18,8 @@ h2 {
 }
 
 .menu1 {
-    text-indent: 900px;
+    
+    text-align:end;
        
 }
 
@@ -42,9 +35,8 @@ h2 {
 hr {
       
     border-color: rgb(175, 175, 175);
-    width: 50%;
-    text-align:center
-    
+    width: 100%;
+    justify-content:center;
 }
 
 #hr1 {
@@ -57,8 +49,6 @@ h1 {
     color: rgb(240,247,240);
     text-align: center;
     font-size: 30px;
-   
-    
 }
 
 h5 {
@@ -66,14 +56,9 @@ h5 {
 }
 
 
-
 .contenedor2 {
     background-color: rgb(212,212,212);
-    padding: 50px;
-    
-   
-    
-
+    padding: 50px;   
 }
 
 
@@ -83,9 +68,6 @@ h5 {
     
     justify-content:space-around
     flex-direction: row;
-    
-  
-    
 }
 
 .imagen {
@@ -97,8 +79,6 @@ h5 {
     border-radius: 100px 100px;
     border: solid;  
     padding: 0%;
-   
-    
 }
 
 
@@ -114,9 +94,6 @@ h5 {
 .columnas {
     display: flex;
     background-color: rgb(212,212,212);
-    
-    
-    
 }
 
 .caja1 {
@@ -140,8 +117,6 @@ h5 {
     justify-content: space-between;
     background-color: rgb(212,212,212);
     padding: 50px;
-    
-       
 }
 
 .leermas1 {
@@ -164,8 +139,6 @@ h5 {
     height: 30px;
     color: white;
     font-family: 'Lobster Two', cursive;
-    
-
 }
 
 .leermas3 {
@@ -191,8 +164,6 @@ h5 {
 
 .contenedor3 {
     display: flex;
-    
-    
 }
 
 .cuadrado {
@@ -234,14 +205,14 @@ h5 {
 .contenedor4 {
     display: flex;
     justify-content: center;
+    
 }
 
 
 .especia0 {
     display: flex;
-    text-align: start;
     
-    
+    margin: 30px;
 }
 
 .especial1 {
@@ -249,46 +220,74 @@ h5 {
     
     font-size: small;
     text-align:left;
-    margin: 10px;
+    margin: 0px;
 }
 
 .especial2 {
+    display: flex;
     display: block;
     font-size: small;
     width: 300px;
-
+    margin:30px;
 }
 
 .especial3 {
     display:block;
-    width: 300px;
+    text-align: center;
+    
     font-size: small;
+    margin: 25px;
 }
 
 .cuadrado-negro {
-    width: 50px;
+    width: 80px;
+    margin: 10px;
+    
 }
 
 
 .menufinal {
     text-align: end;
-    
-    
-    
 }
 
 .link2 {
     text-decoration: none;
     color: gray;
-    
+}
 
-    
-
+.latest-tweets {
+    display: flex;
+    margin: 0px;
+    font-size: larger;
 }
 
 
 
 
+.rectangulo1 {
+    display: flex;
+    
+    font-size: small;
+    text-align:left;
+    margin: 0px;
+}
+
+.rectangulo2 {
+    display: flex;
+    
+    font-size: small;
+    text-align:left;
+    margin: 0px;
+    
+}
+
+.rectangulo3 {
+    display: flex;
+    
+    font-size: small;
+    text-align:left;
+    margin: 0px;
+}
 
 
 
